Make sure the first visible image contains drawn labels if it has any.

--- a/project/static/scripts/css/style.css
+++ b/project/static/scripts/css/style.css
@@ -1,6 +1,6 @@
-
 body {
 	background-color: #839cc4;
+	padding-top: 65px; 
 }
 
 ul {
